--- a/fe_baprjct/public/index.html
+++ b/fe_baprjct/public/index.html
@@ -31,6 +31,7 @@
     <!-- Add these links in your public/index.html head -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/morphext/2.4.0/morphext.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
 	
 	<!-- Favicon  -->
@@ -137,5 +138,6 @@
   <script src="js/isotope.pkgd.min.js"></script> <!-- Isotope for filter -->
   <script src="js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
   <script src="js/scripts.js"></script> <!-- Custom scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   </body>
 </html>
