--- a/fe_baprjct/public/index.html
+++ b/fe_baprjct/public/index.html
@@ -26,14 +26,15 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/fontawesome-all.css" rel="stylesheet">
     <link href="css/swiper.css" rel="stylesheet">
-	<link href="css/magnific-popup.css" rel="stylesheet">
-	<link href="css/styles.css" rel="stylesheet">
+	  <link href="css/magnific-popup.css" rel="stylesheet">
+	  <link href="css/styles.css" rel="stylesheet">
+    <link href="css/login.css" rel="stylesheet">
     <!-- Add these links in your public/index.html head -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/morphext/2.4.0/morphext.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
-	
+
 	<!-- Favicon  -->
     <link rel="icon" href="images/favicon.png">
   </head>
@@ -50,81 +51,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-          <!-- Footer -->
-    <div class="footer">
-      <div class="container">
-          <div class="row">
-              <div class="col-md-6">
-                  <div class="text-container about">
-                      <h4>Few Words About Aria</h4>
-                      <p class="white">We're passionate about delivering the best business growth services for companies just starting out as startups or industry players that have established their market position a long tima ago.</p>
-                  </div> <!-- end of text-container -->
-              </div> <!-- end of col -->
-              <div class="col-md-2">
-                  <div class="text-container">
-                      <h4>Links</h4>
-                      <ul class="list-unstyled li-space-lg white">
-                          <li>
-                              <a class="white" href="#your-link">startupguide.com</a>
-                          </li>
-                          <li>
-                              <a class="white" href="terms-conditions.html">Terms & Conditions</a>
-                          </li>
-                          <li>
-                              <a class="white" href="privacy-policy.html">Privacy Policy</a>
-                          </li>
-                      </ul>
-                  </div> <!-- end of text-container -->
-              </div> <!-- end of col -->
-              <div class="col-md-2">
-                  <div class="text-container">
-                      <h4>Tools</h4>
-                      <ul class="list-unstyled li-space-lg">
-                          <li>
-                              <a class="white" href="#your-link">businessgrowth.com</a>
-                          </li>
-                          <li>
-                             <a class="white" href="#your-link">influencers.com</a>
-                          </li>
-                          <li class="media">
-                              <a class="white" href="#your-link">optimizer.net</a>
-                          </li>
-                      </ul>
-                  </div> <!-- end of text-container -->
-              </div> <!-- end of col -->
-              <div class="col-md-2">
-                  <div class="text-container">
-                      <h4>Partners</h4>
-                      <ul class="list-unstyled li-space-lg">
-                          <li>
-                              <a class="white" href="#your-link">unicorns.com</a>
-                          </li>
-                          <li>
-                              <a class="white" href="#your-link">staffmanager.com</a>
-                          </li>
-                          <li>
-                              <a class="white" href="#your-link">association.gov</a>
-                          </li>
-                      </ul>
-                  </div> <!-- end of text-container -->
-              </div> <!-- end of col -->
-          </div> <!-- end of row -->
-      </div> <!-- end of container -->
-  </div> <!-- end of footer -->  
-  <!-- end of footer -->
-
-
-  <!-- Copyright -->
-  <div class="copyright">
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-12">
-                  <p class="p-small">Copyright © 2020 <a href="https://inovatik.com">Template by Inovatik</a></p>
-              </div> <!-- end of col -->
-          </div> <!-- enf of row -->
-      </div> <!-- end of container -->
-  </div> <!-- end of copyright --> 
-  <!-- end of copyright -->
   
     
   <!-- Scripts -->
