--- a/fe_baprjct/public/index.html
+++ b/fe_baprjct/public/index.html
@@ -29,6 +29,8 @@
 	  <link href="css/magnific-popup.css" rel="stylesheet">
 	  <link href="css/styles.css" rel="stylesheet">
     <link href="css/login.css" rel="stylesheet">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/forgot_password.css" />
+
     <!-- Add these links in your public/index.html head -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/morphext/2.4.0/morphext.min.js"></script>
