--- a/fe_baprjct/public/index.html
+++ b/fe_baprjct/public/index.html
@@ -30,7 +30,7 @@
 	  <link href="css/styles.css" rel="stylesheet">
     <link href="css/login.css" rel="stylesheet">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/forgot_password.css" />
-
+    <link href="css/project_catalog.css" rel="stylesheet">
     <!-- Add these links in your public/index.html head -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/morphext/2.4.0/morphext.min.js"></script>
